--- a/style/style.css
+++ b/style/style.css
@@ -6,6 +6,7 @@
   font-variation-settings:
     "wdth" 100;
 }
+
 /* Header Image  */
 .header{
     background-image: url('../images/developer.png'), url('../images/header_bg.png');
@@ -75,4 +76,37 @@ nav ul li{
 nav ul li a{
     text-decoration: none;
     font-size: 20px;
+}
+/* section title  */
+.section-title{
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818 ;
+}
+.section-description{
+    font-size: 18px;
+    color: #757575;
+}
+.secondary-background{
+    background-color:#FFF8F3;
+}
+
+/* about style  */
+.about{
+    border-radius: 10px;
+    padding: 130px 150px;
+    text-align: center;
+    margin-top: 30px;
+}
+/* main style   */
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+.item-description{
+    font-weight: 600;
+}
+.about-items{
+    display: flex;
+    justify-content: space-around;
 }
